--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-  
+  assets:
+    - assets/logo.png
+    - assets/logo2.png
+    - assets/logo3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
