--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,16 +10,25 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # --- Core UI ---
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5+1
+
+  # --- Firebase ---
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
-  google_sign_in: ^6.1.6
   cloud_firestore: ^6.0.2
-  provider: ^6.1.5+1
   flutter_secure_storage: ^9.2.4
+  google_sign_in: ^6.1.6
+
+  # --- Maps & Location ---
   google_maps_flutter: ^2.5.0
+  flutter_polyline_points: ^2.1.0
   geolocator: ^10.1.0
-  flutter_polyline_points: ^2.0.0
+  flutter_google_places_sdk: ^0.4.1
+
+  # --- Networking ---
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
