--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,23 +12,25 @@ dependencies:
 
   # --- Core UI ---
   cupertino_icons: ^1.0.8
-  provider: ^6.1.5+1
+  provider: ^6.1.5
 
   # --- Firebase ---
-  firebase_core: ^4.1.1
-  firebase_auth: ^6.1.0
-  cloud_firestore: ^6.0.2
-  flutter_secure_storage: ^9.2.4
-  google_sign_in: ^6.1.6
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  flutter_secure_storage: ^9.1.1
+  google_sign_in: ^6.2.1
 
   # --- Maps & Location ---
-  google_maps_flutter: ^2.5.0
+  google_maps_flutter: ^2.6.0
   flutter_polyline_points: ^2.1.0
-  geolocator: ^10.1.0
-  flutter_google_places_sdk: ^0.4.1
+  geolocator: ^14.0.2
+  flutter_google_places_sdk: 0.4.2+1
+  permission_handler: ^11.3.0
 
   # --- Networking ---
   http: ^1.2.1
+  rename_app: ^1.6.5
 
 dev_dependencies:
   flutter_test:
