--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   geolocator: ^14.0.2
   flutter_google_places_sdk: 0.4.2+1
   permission_handler: ^11.3.0
+  shared_preferences: ^2.2.2
 
   # --- Networking ---
   http: ^1.2.1
