--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,14 +1,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- ✅ Add these two lines for location permission -->
+    <!-- ✅ Location permissions -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    
+    <!-- ✅ Internet permission (required for Facebook login) -->
+    <uses-permission android:name="android.permission.INTERNET"/>
 
-    <application android:label="Green Route" android:name="${applicationName}" android:icon="@mipmap/ic_launcher">
+    <application 
+        android:label="Green Route" 
+        android:name="${applicationName}" 
+        android:icon="@mipmap/ic_launcher">
 
-        <activity android:name=".MainActivity" android:exported="true" android:launchMode="singleTop" android:taskAffinity="" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
+        <activity 
+            android:name=".MainActivity" 
+            android:exported="true" 
+            android:launchMode="singleTop" 
+            android:taskAffinity="" 
+            android:theme="@style/LaunchTheme" 
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" 
+            android:hardwareAccelerated="true" 
+            android:windowSoftInputMode="adjustResize">
 
-            <meta-data android:name="io.flutter.embedding.android.NormalTheme" android:resource="@style/NormalTheme"/>
+            <meta-data 
+                android:name="io.flutter.embedding.android.NormalTheme" 
+                android:resource="@style/NormalTheme"/>
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -16,12 +32,41 @@
             </intent-filter>
         </activity>
 
+        <!-- ✅ Facebook Authentication -->
+        <meta-data 
+            android:name="com.facebook.sdk.ApplicationId" 
+            android:value="@string/facebook_app_id"/>
+        
+        <meta-data 
+            android:name="com.facebook.sdk.ClientToken" 
+            android:value="@string/facebook_client_token"/>
+            
+        <activity 
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
-        <meta-data android:name="flutterEmbedding" android:value="2"/>
+        <meta-data 
+            android:name="flutterEmbedding" 
+            android:value="2"/>
 
         <!-- ✅ Your Google Maps API Key -->
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value=""/>
+        <meta-data 
+            android:name="com.google.android.geo.API_KEY" 
+            android:value=""/>
     </application>
 
     <!-- Required to query activities that can process text -->
