--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_secure_storage: ^9.1.1
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^6.0.3
+  flutter_tts: ^3.8.0
 
   # --- Maps & Location ---
   google_maps_flutter: ^2.6.0
