--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   # --- Core UI ---
   cupertino_icons: ^1.0.8
   provider: ^6.1.5
+  share_plus: ^7.2.0
 
   # --- Firebase ---
   firebase_core: ^3.4.0
@@ -31,6 +32,7 @@ dependencies:
   permission_handler: ^11.3.0
   shared_preferences: ^2.2.2
   flutter_compass: ^0.8.0
+  intl: ^0.18.0
 
   # --- Networking ---
   http: ^1.2.1
