--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -68,7 +68,7 @@
         <!-- ✅ Your Google Maps API Key -->
         <meta-data 
             android:name="com.google.android.geo.API_KEY" 
-            android:value="AIzaSyBuAq0UCRUt89jKicriPY8_KCfHWIGrzLc"/>
+            android:value=""/>
     </application>
 
     <!-- Required to query activities that can process text -->
