--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
     <!-- ✅ Internet permission (required for Facebook login) -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
+     <!-- ✅ ADDED: Camera and Storage permissions for profile pictures -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+
     <application 
         android:label="Green Route" 
         android:name="${applicationName}" 
